<resources>
    <string name="app_name">Music App Player</string>
    <string name="shuffle_btn">Shuffle</string>
    <string name="favourites_btn">Favourites</string>
    <string name="playlists_btn">Playlists</string>
    <string name="total_song">Total Songs</string>
    <string name="world_of_music">World of Music</string>
    <string name="song_name">Song Name</string>
    <string name="back_btn">Back</string>
    <string name="start_tv">00:00</string>
    <string name="end_tv">Loading...</string>
    <string name="repeat_btn">Repeat</string>
    <string name="equalizer_btn">Equalizer</string>
    <string name="share_btn">Share</string>
    <string name="timer_btn">Timer</string>
    <string name="close">Close</string>
    <string name="open">Open</string>
    <string name="app_icon">Icon</string>
    <string name="text_nav">Welcome to\nWorld of Musics</string>
    <string name="feedback">Feedback</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="exit">Exit</string>
    <string name="song_albums">Song Album</string>
    <string name="playlist_name">Playlist Name</string>
    <string name="playlist_delete">Delete</string>
    <string name="user_name">Your Name</string>
    <string name="add_song">Add</string>
    <string name="remove_all">Remove All</string>
    <string name="min_15">15 Minutes</string>
    <string name="min_30">30 Minutes</string>
    <string name="min_60">60 Minutes</string>
    <string name="search_view">Search View</string>
    <string name="search_song">Search Song</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>