<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item
        android:id="@+id/navFeeback"
        android:title="@string/feedback"
        android:icon="@drawable/feedback_icon"/>

    <item
        android:id="@+id/navSettings"
        android:title="@string/settings"
        android:icon="@drawable/settings_icon"
        />

    <item
        android:id="@+id/navAbout"
        android:title="@string/about"
        android:icon="@drawable/about_icon"
        android:visible="true"/>
    <item
        android:id="@+id/navExit"
        android:title="@string/exit"
        android:icon="@drawable/exit_icon"
        android:visible="true"/>


</menu>