<?xml version="1.0" encoding="utf-8"?>

<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:fitsSystemWindows="true"
    tools:openDrawer="start"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundmain"
    tools:context=".MainActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.appcompat.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:id="@+id/toolbar"
                android:elevation="4dp"
                android:titleTextColor="@color/black"
                android:background="@color/cool_pink"
                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                app:popupTheme="@style/Theme.AppCompat.Light">
                <!--            <Button-->
                <!--                android:id="@+id/searchBtn"-->
                <!--                style="@style/Widget.AppCompat.Button.Borderless"-->
                <!--                android:layout_width="wrap_content"-->
                <!--                android:layout_height="wrap_content"-->
                <!--                android:layout_marginTop="2dp"-->
                <!--                android:layout_gravity="right"-->
                <!--                android:drawableTop="@drawable/search_icon"-->
                <!--                android:drawableTint="@android:color/white"-->
                <!--                android:textColor="@color/black"/>-->

            </androidx.appcompat.widget.Toolbar>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/shufflebtn"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@string/shuffle_btn"
                    android:drawableTop="@drawable/shuffle_icon"
                    android:drawableTint="@android:color/holo_red_light"
                    android:text="@string/shuffle_btn"
                    android:textAllCaps="false"
                    android:textColor="@color/black" />

                <Button
                    android:id="@+id/favouritebtn"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableTint="@android:color/holo_red_light"
                    android:layout_weight="1"
                    android:contentDescription="@string/favourites_btn"
                    android:drawableTop="@drawable/favourite_icon_empty"
                    android:text="@string/favourites_btn"
                    android:textAllCaps="false"
                    android:textColor="@color/black" />

                <Button
                    android:id="@+id/playlistbtn"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@string/playlists_btn"
                    android:drawableTint="@android:color/holo_red_light"
                    android:drawableTop="@drawable/playlist_icon"
                    android:text="@string/playlists_btn"
                    android:textAllCaps="false"
                    android:textColor="@color/black" />

            </LinearLayout>

            <TextView
                android:id="@+id/totalSong"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/total_song"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/musicRV"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </LinearLayout>
        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/nowPlaying"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:name="com.example.musicappplayer.NowPlaying"
            tools:layout = "@layout/fragment_now_playing"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_gravity="start"
        android:layout_height="match_parent"
        app:menu = "@menu/nav_menu"
        app:headerLayout="@layout/nav_header"
        app:itemTextColor="@color/black"
        android:fitsSystemWindows="true"/>

</androidx.drawerlayout.widget.DrawerLayout>