<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/gradientbackgroundplaylist"

    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".PlaylistDetails">
    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/cool_pink"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <ImageButton
            android:id="@+id/backBtnPD"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:backgroundTint="@android:color/transparent"
            android:contentDescription="@string/back_btn"
            android:src="@drawable/back30_icon"
            android:padding="5dp"
            app:tint="@color/white" />

        <TextView
            android:id="@+id/playListNamePD"
            style="bold"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/playlists_btn"
            android:gravity="center"
            android:text="@string/playlists_btn"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textSize="25sp" />

    </LinearLayout>
    <LinearLayout
        android:id="@+id/linearLayoutDetails"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearLayout"
        android:layout_marginTop="10dp">
        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/playlistImgPD"
            android:layout_width="250dp"
            android:src="@drawable/toptrending"
            app:shapeAppearanceOverlay="@style/curved"
            android:layout_height="160dp"/>

        <TextView
            android:id="@+id/moreInfo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="5dp"
            android:background="@android:color/transparent"
            android:fontFamily="sans-serif-black"
            android:paddingTop="10dp"
            android:text="TOP TRENDING ACOUSTIC COVER\n\nCreated On: 23 May 2018"
            android:textSize="20sp" />
    </LinearLayout>
    <TextView
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearLayoutDetails"
        android:id="@+id/totalSong"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="Total Songs:"
        android:textColor="@color/black"
        android:textSize="20sp" />
    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/playlistDetailsRV"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/totalSong"
        android:layout_marginBottom="5dp"
        android:scrollbars="vertical"
        android:paddingBottom="330dp"
        android:layout_marginTop="10dp" />


    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        app:icon="@drawable/shuffle_icon"
        app:iconSize="35dp"
        app:iconTint="@color/cool_pink"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.9"
        app:strokeWidth ="2dp"
        android:id="@+id/shuffleBtnPD"
        app:strokeColor="@color/cool_pink" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/cool_green"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/addBtnDT"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/add_song"
            android:drawableLeft="@drawable/add_icon"
            android:drawableTint="@android:color/holo_red_light"
            android:text="@string/add_song"
            android:textAllCaps="false"
            android:textColor="@color/black" />


        <Button
            android:id="@+id/removeALlBtnPD"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/remove_all"
            android:drawableLeft="@drawable/remove_icon"
            android:drawableTint="@android:color/holo_red_light"
            android:text="@string/remove_all"
            android:textAllCaps="false"
            android:textColor="@color/black" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>